# fastapi-starter-template

./: .env  .gitignore  Dockerfile  README.md  Readme.md  pyproject.toml  requirements.txt
public/: Readme.md
src/: generator.py  main.py
src/common/: env.py
src/configs/: auth.py  db.py
src/models/: __template_mongo_model  base.py  post.py  user.py
src/routes/: base.py  middleware.py
src/routes/api/: __template_mongo_route  auth.py  post.py
